docs: complete rewrite of technical documentation hub from scratch